Fix broken link in links page

--- a/links.html
+++ b/links.html
@@ -10,19 +10,19 @@
     <ul>
         <li><a href="content.html" target="content-frame">What is HTML?</a></li>
         <li><a href="headings.html" target="content-frame">Headings</a></li>
-        <li><a href="paragraph.html" target="content-frame">Paragraphs</a></li>
+        <li><a href="paragraphs.html" target="content-frame">Paragraphs</a></li>
     </ul>
     <h3>CSS Reference</h3>
     <ul>
         <li><a href="content.html" target="content-frame">What is HTML?</a></li>
         <li><a href="headings.html" target="content-frame">Headings</a></li>
-        <li><a href="paragraph.html" target="content-frame">Paragraphs</a></li>
+        <li><a href="paragraphs.html" target="content-frame">Paragraphs</a></li>
     </ul>
     <h3>Javascript Reference</h3>
     <ul>
         <li><a href="content.html" target="content-frame">What is HTML?</a></li>
         <li><a href="headings.html" target="content-frame">Headings</a></li>
-        <li><a href="paragraph.html" target="content-frame">Paragraphs</a></li>
+        <li><a href="paragraphs.html" target="content-frame">Paragraphs</a></li>
     </ul>
 </body>
 </html>
